# istat_mcp_server

./: .gitignore  LOG.md  README.md  README_IT.md  pyproject.toml
.claude/skills/istat-mcp/: SKILL.md
.github/instructions/: copilot-instructions.md
old/skills/: SKILLS_EN.md  SKILLS_IT.md
resources/: build_territorial_subdivisions.py  build_territorial_subdivisions_notes.md
site/public/: robots.txt  sitemap.xml
site/src/layouts/: Base.astro
site/src/pages/: index.astro  it.astro
site/src/styles/: global.css
skills/istat-mcp/: SKILL.md
src/istat_mcp_server/: server.py
src/istat_mcp_server/api/: client.py  models.py
src/istat_mcp_server/cli/: __init__.py  get_concepts_cli.py
src/istat_mcp_server/resources/: istat_lookup.duckdb
src/istat_mcp_server/search/: semantic.py
src/istat_mcp_server/tools/: __init__.py  check_code_exists.py  discover_dataflows.py  get_cache_diagnostics.py  get_concepts.py  get_constraints.py  get_data.py  get_territorial_codes.py  search_constraint_values.py
src/istat_mcp_server/utils/: tool_helpers.py
tests/: test_cache.py  test_check_code_exists.py  test_discover_dataflows.py  test_get_cache_diagnostics.py  test_get_concepts.py  test_get_constraints.py  test_get_data.py  test_get_territorial_codes.py  test_models.py
